<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MovieDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/movie_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MovieTitleText"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_subtitle_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MovieSubTitleText"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MovieSubTitleText"
                    android:textSize="16sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MovieOverviewText"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/movie_overview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MovieOverviewText"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <com.anizmocreations.bmstask.custom.CastAndCrewView
                android:id="@+id/cast_and_crew_view"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/review_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MovieTitleText"
                android:textSize="24sp"
                android:text="@string/label_reviews"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <com.anizmocreations.bmstask.custom.ReviewsView
                android:visibility="gone"
                android:id="@+id/reviews_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/production_company"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/similar_movies_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MovieTitleText"
                android:textSize="24sp"
                android:visibility="gone"
                android:text="@string/similar_movies"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_movies_list"
                android:nestedScrollingEnabled="false"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book"
                style="@style/MovieTitleText"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:visibility="invisible"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book"
        style="@style/MovieTitleText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

</RelativeLayout>